composer json php version update

--- a/app/code/SK/ProductCOA/composer.json
+++ b/app/code/SK/ProductCOA/composer.json
@@ -2,7 +2,7 @@
     "name": "sk/productcoa",
     "description": "Product's Certification of Authentication Module",
     "require": {
-      "php": "~8.1.0||~8.2.0||~8.3.0"
+      "php": "~8.3.0||~8.4.0"
     },
     "type": "magento2-module",
     "version": "1.0.0",
