--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Install Magento
         run: |
-          bin/magento setup:install \
+          bin/magento setup:install 
             --base-url=http://localhost \
             --db-host=127.0.0.1 \
             --db-name=magento \
