--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Install Magento
         run: |
-          bin/magento setup:install 
+          php bin/magento setup:install \
             --base-url=http://localhost \
             --db-host=127.0.0.1 \
             --db-name=magento \
@@ -82,6 +82,7 @@ jobs:
             --search-engine=opensearch \
             --opensearch-host=127.0.0.1 \
             --opensearch-port=9200
+
 
       # Optional: PHPCS code style check
       - name: Run PHPCS
