--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,24 +63,26 @@ jobs:
         run: chmod -R 777 var/ pub/ generated/
 
       - name: Install Magento
-        run: bin/magento setup:install \
-              --base-url=http://localhost \
-              --db-host=127.0.0.1 \
-              --db-name=magento \
-              --db-user=root \
-              --db-password=magento \
-              --admin-firstname=Admin \
-              --admin-lastname=User \
-              --admin-email=admin@example.com \
-              --admin-user=admin \
-              --admin-password=admin123 \
-              --language=en_US \
-              --currency=USD \
-              --timezone=UTC \
-              --use-rewrites=1 \
-              --search-engine=opensearch \
-              --opensearch-host=127.0.0.1 \
-              --opensearch-port=9200
+        run: |
+          php bin/magento setup:install \
+            --base-url=http://localhost \
+            --db-host=127.0.0.1 \
+            --db-name=magento \
+            --db-user=root \
+            --db-password=magento \
+            --admin-firstname=Admin \
+            --admin-lastname=User \
+            --admin-email=admin@example.com \
+            --admin-user=admin \
+            --admin-password=admin123 \
+            --language=en_US \
+            --currency=USD \
+            --timezone=UTC \
+            --use-rewrites=1 \
+            --search-engine=opensearch \
+            --opensearch-host=127.0.0.1 \
+            --opensearch-port=9200
+
 
       # Optional: PHPCS code style check
       - name: Run PHPCS
