--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
             --db-host=127.0.0.1 \
             --db-name=magento \
             --db-user=root \
-            --db-password=magento \
+            --db-password=root \
             --admin-firstname=Admin \
             --admin-lastname=User \
             --admin-email=admin@example.com \
